# auto-scale-ai

./: Dockerfile  README.md  locustfile.py  pyproject.toml
k8s/: deploy.yaml
src/auto_scale_ai/: __init__.py  client.py  main.py  server.py
