[project]
name = "auto-scale-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sreenaths", email = "somarajapuram@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.2",
    "uvicorn[standard]>=0.35.0",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
